@@ -8,6 +8,7 @@ CHANGES
 
 * Issue #71 (Distribute Issue #333): EasyInstall now puts less emphasis on the
   condition when a host is blocked via ``--allow-hosts``.
+* Issue #72: Restored Python 2.4 compatibility in ``ez_setup.py``.
 
 ---
 1.0
